[CyclingUK] Added fix to background image for hero section on mobile

--- a/web/cobrands/cyclinguk/base.scss
+++ b/web/cobrands/cyclinguk/base.scss
@@ -384,7 +384,7 @@ body.mappage {
 .confirmation-header {
     padding: 140px 1rem 2rem;
     background-size: 80px;
-    background-position: center top 140px;
+    background-position: center top 50px;
     background-image: url('/cobrands/cyclinguk/images/icons/confirmation.png');
 
     &.confirmation-header--inbox {
